k8s/generated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflixclone
  namespace: devsecops
  labels:
    app.kubernetes.io/name: netflixclone
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: netflixclone
  ports:
    - name: http
      port: 80
      targetPort: 8000
