k8s/generated/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflixclone
  namespace: devsecops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: netflixclone.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflixclone
                port:
                  number: 80
